<?xml version="1.0" encoding="utf-8"?>

<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CheckIn">

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:card_view="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:id="@+id/pop_up_kickCheckIn"
        android:visibility="invisible"
        >

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:layout_marginTop="300dp">

            <LinearLayout
                android:padding="10dp"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/invalid_text_checkin"
                    android:layout_gravity="center"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="youre kicked out"
                    android:textSize="20sp"
                    android:textStyle="bold"
                    android:padding="10dp"/>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_centerInParent = "true"
                    android:orientation="horizontal">

                    <Button
                        android:id="@+id/okButtonCheckIn"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="100dp"
                        android:text="OK" />

                </LinearLayout>

            </LinearLayout>

        </androidx.cardview.widget.CardView>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        >
        <ImageView
            android:id="@+id/profilePic"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:gravity ="left|center"
            android:layout_marginTop="50dp"
            android:layout_marginLeft="30dp"
            tools:layout_editor_absoluteX="-4dp"
            tools:layout_editor_absoluteY="57dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"/>
        <TextView
            android:layout_width="230dp"
            android:layout_height="wrap_content"
            android:gravity ="left|center"
            android:layout_marginTop="30dp"
            android:layout_marginLeft="30dp"
            android:id="@+id/name"
            android:text=""
            android:textColor="#000000"
            android:textSize="25sp"
            />

        <TextView
            android:layout_width="230dp"
            android:layout_height="wrap_content"
            android:gravity ="left|center"
            android:layout_marginTop="30dp"
            android:layout_marginLeft="30dp"
            android:id="@+id/status"
            android:text=""
            android:textStyle="bold"
            android:textColor="#000000"
            android:textSize="25sp"
            />

        <TextView
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:gravity ="left|center"
            android:layout_marginTop="20dp"
            android:layout_marginLeft="30dp"
            android:id="@+id/lastLocation"
            android:text="Last Location:"
            android:textColor="#FF0000"
            android:textSize="18sp"
            />


        <TextView
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:gravity ="left|center"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="30dp"
            android:id="@+id/time"
            android:text=""
            android:textColor="#808080"
            android:textSize="18sp"
            />

        <Button
            android:id="@+id/checkIn_button"
            android:layout_width="175dp"
            android:layout_height="51dp"
            android:background="#7393B3"
            android:textStyle="bold"
            android:text="SCAN QR"
            android:textColor="#FFFFFF"
            android:textSize="20sp"
            android:layout_centerInParent = "true"
            android:layout_marginLeft="100dp"
            android:layout_marginTop="100dp"
            app:layout_constraintTop_toBottomOf="@+id/time"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <Button
            android:id="@+id/home_button"
            android:layout_width="175dp"
            android:layout_height="51dp"
            android:background="#7393B3"
            android:textStyle="bold"
            android:text="Home"
            android:textColor="#FFFFFF"
            android:textSize="20sp"
            android:layout_centerInParent = "true"
            android:layout_marginLeft="100dp"
            android:layout_marginTop="20dp"
            app:layout_constraintTop_toBottomOf="@+id/time"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

    </LinearLayout>

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:card_view="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:id="@+id/pop_up_kick2"
        android:visibility="invisible"
        >

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:layout_marginTop="300dp"
            app:cardCornerRadius="5dp"
            app:contentPadding ="5dp">

            <LinearLayout
                android:padding="10dp"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/invalid_text"
                    android:layout_gravity="center"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="You have been kicked out by a manager."
                    android:textSize="20sp"
                    android:textStyle="bold"
                    android:padding="10dp"/>

                <Button
                    android:id="@+id/okButton2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="Ok" />

            </LinearLayout>

        </androidx.cardview.widget.CardView>
    </LinearLayout>



</androidx.constraintlayout.widget.ConstraintLayout>