...
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_centerInParent = "true"
                    android:orientation="horizontal">

                    <Button
                        android:id="@+id/confirmCheckButton"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="100dp"
                        android:text="Yes" />

                    <Button
...
